flask-service-np.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: flask-service-np
spec:
  type: NodePort
  selector: 
    app: flask
  ports: 
   - protocol: TCP 
     port: 80
     targetPort: 5000
