flask-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: flask-service
spec:
  type: ClusterIP
  selector: 
    app: flask
  ports: 
   - protocol: TCP 
     port: 5000
