service20-service-20.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: service20-service-np
spec:
  type: NodePort
  selector: 
    app: service20
  ports: 
   - protocol: TCP 
     port: 80
     targetPort: 1337
