flask-ingress.yaml
apiVersion: extensions/v1beta1 
kind: Ingress 
metadata: 
  name: flask-ingress
spec: 
  rules: 
  - host: takeyan-cluster.us-south.containers.appdomain.cloud
    http: 
      paths: 
      - path: /flask/*
        backend: 
          serviceName: flask-service 
          servicePort: 80 
      - path: /flask2/*
        backend:
          serviceName: flask-service-np
          servicePort: 5000
